--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch:server": "npx nodemon \"./bin/www\""
   },
   "dependencies": {
+    "autoprefixer": "^7.2.5",
     "body-parser": "~1.18.2",
     "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
@@ -18,6 +19,8 @@
     "morgan": "~1.9.0",
     "nunjucks": "^3.0.1",
     "popper.js": "^1.12.9",
+    "postcss-loader": "^2.0.10",
+    "precss": "^3.1.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "ts-loader": "^3.3.1",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0"
